FIX: Responsive Discord chat alignment

--- a/files/discord-mods/themes/responsive-discord.css
+++ b/files/discord-mods/themes/responsive-discord.css
@@ -2,7 +2,7 @@
  * @name Greens Responsive Discord
  * @author GreenMan36#0633
  * @authorLink https://github.com/GreenMan36
- * @version 17.12.23a
+ * @version 17.12.23b
  * @description A theme that tries to make Discord's sidebars adapt when resizing your window.
 */
 
@@ -22,7 +22,7 @@
 /* used for theme name and version, DO NOT TOUCH */
 :root {
   --theme-name: "Greens Responsive Discord";
-  --version: "11.12.23a";
+  --version: "17.12.23b";
 }
 
 /* these can be customized. just copy/paste the whole thing into your custom CSS and mess around with it. */
@@ -243,7 +243,7 @@ a.anchor-1MIwyf.anchorUnderlineOnHover-2qPutX.snowsgivingLink-1TZi3c {
     width: 100%;
   }
 
-  .chat-2ZfjoI {
+  [class^="chat__"] {
     margin-left: 128px;
   }
 
@@ -286,6 +286,10 @@ a.anchor-1MIwyf.anchorUnderlineOnHover-2qPutX.snowsgivingLink-1TZi3c {
     right: 0;
     /* fixes a weird bug that sometimes happens when doing a big paste in the textbox */
     height: calc(100% - var(--member-bar-top-offset));
+  }
+
+  [class^="chatContainer__"] > [class^="chatContent__"] {
+    margin-right: 60px;
   }
 
   /* fixes the layering of the sidebar */
